Add Google Analytics tracking code

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,15 @@
     <title>Finance Made Simple</title>
     <script src="{{ url_for('static', filename='smooth-scrolling.js') }}"></script>
     <link rel="stylesheet" href="static/index.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5QFHEDZJZP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5QFHEDZJZP');
+    </script>
 
   </head>
   <body class="smooth-scroll">
